--- a/Frontend/content/css/components.css
+++ b/Frontend/content/css/components.css
@@ -6794,45 +6794,39 @@ body {
 .nav-pills > li > a > span.label {
   margin-left: 5px;
 }
-.alert .btn-default,
-.alert > span.label.label-default,
-.btn > span.label.label-default,
-.nav-pills > li > a > span.label.label-default {
+.alert.label-default .btn-default,
+.alert.label-default > span.label.label-default,
+.btn.btn-default > span.label.label-default {
   background-color: #342b2b;
   border-color: #342b2b;
 }
-.alert .btn-primary,
-.alert > span.label.label-primary,
-.btn > span.label.label-primary,
-.nav-pills > li > a > span.label.label-primary {
+.alert.label-primary .btn-primary,
+.alert.label-primary > span.label.label-primary,
+.btn.btn-primary > span.label.label-primary {
   background-color: #0048f0;
   border-color: #0048f0;
 }
-.alert .btn-success,
-.alert > span.label.label-success,
-.btn > span.label.label-success,
-.nav-pills > li > a > span.label.label-success {
+.alert.label-success .btn-success,
+.alert.label-success > span.label.label-success,
+.btn.btn-success > span.label.label-success {
   background-color: #1e9111;
   border-color: #1e9111;
 }
-.alert .btn-info,
-.alert > span.label.label-info,
-.btn > span.label.label-info,
-.nav-pills > li > a > span.label.label-info {
+.alert.label-info .btn-info,
+.alert.label-info > span.label.label-info,
+.btn.btn-info > span.label.label-info {
   background-color: #098db4;
   border-color: #098db4;
 }
-.alert .btn-warning,
-.alert > span.label.label-warning,
-.btn > span.label.label-warning,
-.nav-pills > li > a > span.label.label-warning {
+.alert.label-warning .btn-warning,
+.alert.label-warning > span.label.label-warning,
+.btn.btn-warning > span.label.label-warning {
   background-color: #ba7900;
   border-color: #ba7900;
 }
-.alert .btn-danger,
-.alert > span.label.label-danger,
-.btn > span.label.label-danger,
-.nav-pills > li > a > span.label.label-danger {
+.alert.label-danger .btn-danger,
+.alert.label-danger > span.label.label-danger,
+.btn.btn-danger > span.label.label-danger {
   background-color: #c11600;
   border-color: #c11600;
 }
@@ -6846,6 +6840,10 @@ body {
 .alert-mini {
   min-height: 55px;
   margin-bottom: 20px;
+}
+.nav-pills > li > a.active > span.label.label-primary {
+  background-color: #0048f0;
+  border-color: #0048f0;
 }
 .btn-select,
 .btn-select > button,
