Range mute control is now toggle type button Added sample of range with mute control

--- a/Frontend/content/css/components.css
+++ b/Frontend/content/css/components.css
@@ -9137,7 +9137,7 @@ footer
     width: -webkit-calc(100% - 60px);
     width:         calc(100% - 60px);
 }
-.range[data-type='mute'] .btn-switch
+.range[data-type='mute'] .btn
 {
     float: right;
 }
