Dropdowns now scroll when over 5 entries

--- a/Frontend/content/css/components.css
+++ b/Frontend/content/css/components.css
@@ -8853,6 +8853,12 @@ footer
 {
     display: none;
 }
+.dropdown-menu
+{
+    overflow-y: auto;
+
+    max-height: 220px;
+}
 .dropdown-menu > li > a
 {
     line-height: 35px;
